# lifeOS

./: .dockerignore  .env.example  .env.tpl  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  REVIEW.md  ROADMAP.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.beads/: events.jsonl  issues.jsonl
.github/workflows/: ci.yml
channel/: .mcp.json  lifeos-channel.ts
data/: sidekick.json
deploy/: deploy.sh  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRD-agent-first.md  PRD.md
missions/: builder-1-core.md  builder-2-ai.md  builder-3-ui.md
src/: __init__.py  ai.py  api.py  backfill.py  config.py  database.py  energy_predictor.py  errors.py  health.py  insights_service.py  models.py  pattern_analyzer.py  personalization.py  schemas.py  token_tracker.py
src/cli/: formatters.py  main.py  sidekick.py
src/integrations/: __init__.py  calendar.py  capture.py  goals.py  notify.py  oura.py  voice.py  whisper.py
src/jobs/: __init__.py  backup.py  calendar_sync.py  daily_brief.py  oura_sync.py  pattern_detection.py  weekly_review.py
src/routers/: __init__.py  backfill.py  backup.py  calendar.py  capture.py  data.py  goals.py  health.py  insights.py  journal.py  notify.py  onboarding.py  oura.py  preferences.py  settings.py  stats.py  voice.py
tests/: conftest.py  test_backup.py  test_calendar.py  test_energy_predictor.py  test_goals.py  test_notify.py  test_oura.py  test_pattern_analyzer.py
tests/api/: __init__.py  (+4 more)
ui/: app.js  index.html  style.css
(+27 files in other folders)
