[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeos"
version = "0.2.0"
description = "AI-powered personal operating system"
requires-python = ">=3.11"

[project.scripts]
lifeos = "src.cli.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]
